[metadata]
name = cadlab
version = 0.7.0
description = A pre-configured JupyterLab for productive CadQuery authoring.
long_description = file: README.md
url = https://github.com/gtri/cadlab
author = Georgia Tech Research Corporation
author_email = support@gtri.gatech.edu
license = BSD-3-Clause
keywords =
    Interactive
    Interpreter
    Shell
    Testing
    Web
    Jupyter
    JupyterLab
classifiers =
    Framework :: Jupyter
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development :: Quality Assurance
    Topic :: Software Development :: Testing

[options.entry_points]
console_scripts =
    cadlab = cadlab.labapp:main
    cadlab-extension = cadlab.labextensionapp:main

[options]
install_requires =
    jupyterlab
package_dir =
    = src
packages = find:
include_package_data = True
zip_safe = False

[options.packages.find]
where =
    src
